test/sema/typeck/lambda/regular-expected-variadic-given.dora
fn expects_regular(f: (Int32): Int32) {}

fn main() {
    let variadic = |values: Int32...|: Int32 {
        values(0i64)
    };
    expects_regular(variadic);
}
